# services/api/internal/present/http/dto/auth.go
@@ -12,6 +12,18 @@ type LoginResponse struct {
 	UserID       string `json:"user_id"`
 }
 
+type RegisterRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
+
+type RegisterResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	SessionID    int64  `json:"session_id"`
+	UserID       string `json:"user_id"`
+}
+
 type RefreshTokenRequest struct {
 	RefreshToken string `json:"refresh_token" binding:"required"`
 }
